--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,32 @@
+@import "./colors";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
+  color: $tertiary-light;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: $white;
+  color: $tertiary-dark;
+}
+
+.container {
+  max-width: 60%;
+  margin: 6rem auto;
 }
